added the ability to insert placeholder text

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,7 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <script src="scripts/app.js"></script>
     <script src="scripts/bootstrap-colorpicker-module.js"></script>
-    <script src="../dist/angular-wysiwyg.min.js"></script>
+    <script src="../dist/angular-wysiwyg.js"></script>
   </head>
 
   <body ng-app="app">
