can now pass placeholders through directive attribute

--- a/demo/index.html
+++ b/demo/index.html
@@ -29,6 +29,7 @@
           ng-model="data.text" 
           enable-bootstrap-title="true"
           textarea-menu="menu"
+          textarea-menu-placeholders="placeholderOptions"
           textarea-custom-menu="custom"
           fn="talk()"
           disabled="disabled">
